// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders image extrasmall 1`] = `
<Image
  resizeMode="cover"
  source={
    Object {
      "uri": "consequuntur corporis repellat",
    }
  }
  style={
    Array [
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 12,
        "borderWidth": 1,
        "height": 24,
        "width": 24,
      },
      Object {
        "backgroundColor": "rgb(72, 144, 67)",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders image large 1`] = `
<Image
  resizeMode="cover"
  source={
    Object {
      "uri": "consequuntur corporis repellat",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 48,
        "height": 96,
        "width": 96,
      },
      Object {
        "backgroundColor": "rgb(72, 144, 67)",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders image medium 1`] = `
<Image
  resizeMode="cover"
  source={
    Object {
      "uri": "consequuntur corporis repellat",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 24,
        "height": 48,
        "width": 48,
      },
      Object {
        "backgroundColor": "rgb(72, 144, 67)",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders image small 1`] = `
<Image
  resizeMode="cover"
  source={
    Object {
      "uri": "consequuntur corporis repellat",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 18,
        "height": 36,
        "width": 36,
      },
      Object {
        "backgroundColor": "rgb(72, 144, 67)",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders person with custom text 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(135, 51, 216)",
        },
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 20,
            "fontWeight": "300",
          },
        ],
      ]
    }
  >
    +5
  </Text>
</View>
`;

exports[`renders text extrasmall 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderColor": "#ffffff",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 24,
          "width": 24,
        },
        Object {
          "backgroundColor": "rgb(135, 51, 216)",
        },
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 12,
          },
        ],
      ]
    }
  >
    e
  </Text>
</View>
`;

exports[`renders text large 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 48,
          "height": 96,
          "width": 96,
        },
        Object {
          "backgroundColor": "rgb(135, 51, 216)",
        },
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 64,
            "fontWeight": "300",
          },
        ],
      ]
    }
  >
    e
  </Text>
</View>
`;

exports[`renders text medium 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        },
        Object {
          "backgroundColor": "rgb(135, 51, 216)",
        },
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 26,
            "fontWeight": "300",
          },
        ],
      ]
    }
  >
    e
  </Text>
</View>
`;

exports[`renders text small 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(135, 51, 216)",
        },
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 20,
            "fontWeight": "300",
          },
        ],
      ]
    }
  >
    e
  </Text>
</View>
`;
